--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "build": "vue-cli-service build"
   },
   "dependencies": {
     "register-service-worker": "^1.0.0",
+    "svg.js": "^2.6.6",
     "vue": "^2.5.17"
   },
   "devDependencies": {
@@ -16,7 +16,6 @@
     "@vue/cli-plugin-eslint": "^3.0.3",
     "@vue/cli-plugin-pwa": "^3.0.3",
     "@vue/cli-service": "^3.0.3",
-    "@vue/eslint-config-standard": "^3.0.3",
     "vue-template-compiler": "^2.5.17"
   }
 }
