--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "deploy": "vue-cli-service build && firebase deploy"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "register-service-worker": "^1.0.0",
+    "suncalc": "^1.8.0",
     "svg.js": "^2.6.6",
-    "vue": "^2.5.17"
+    "vue": "^2.5.17",
+    "vue-material": "^1.0.0-beta-10.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.3",
