--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "MoonFace",
-  "short_name": "MoonFace",
+  "name": "Moonface",
+  "short_name": "Moonface",
   "icons": [
     {
       "src": "/img/icons/icon-192x192.png",
