--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "moment": "^2.22.2",
     "register-service-worker": "^1.0.0",
     "suncalc": "^1.8.0",
     "svg.js": "^2.6.6",
